kdirmodel: Allow using full path for Icon in .desktop file

This allows KDirModel correctly shows the icon with a full path specified
in the .desktop file.

BUG: 448116
BUG: 448596